0024820: CLang compiler warning -Wreturn-stack-address The signature of the function BOPDS_DS::CommonBlock(const Handle(BOPDS_PaveBlock)& thePB) has been changed to return handle, not a reference to handle.